--- a/index.html
+++ b/index.html
@@ -14,34 +14,52 @@
         <div class="color" id="vermelho">cor vermelha </div>
         <div class="color" id="azul">cor azul </div>
         <div class="color" id="lilas">cor violeta </div>
+   
     </div>
     <div id="pixel-board">
+        <div id="linha1">
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+        </div>
+        <div id="linha1">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            </div>
+            <div id="linha1">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                </div>
+                <div id="linha1">
+                    <div class="pixel"></div>
+                    <div class="pixel"></div>
+                    <div class="pixel"></div>
+                    <div class="pixel"></div>
+                    <div class="pixel"></div>
+                    <div class="pixel"></div>
+                    </div>
+                    <div id="linha1">
+                        <div class="pixel"></div>
+                        <div class="pixel"></div>
+                        <div class="pixel"></div>
+                        <div class="pixel"></div>
+                        <div class="pixel"></div>
+                        <div class="pixel"></div>
+                        </div>
     </div>
+<script src="script.js"  >
 
+</script>
 </body>
 </html>
