foi inserido id com o nome das cores nas divs e foi criado css para posicionamento body, main, header, section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[DiegoSerafim]-project-pixels-art</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -12,11 +13,13 @@
             <h1 id="title">Paleta de Cores</h1>
         </header>
         <section id="color-palette">
-            <div class="color">Preto</div>
-            <div class="color">Vermelho</div>
-            <div class="color">Azul</div>
-            <div class="color">Verde</div>
+            <div class="color" id="preto">Preto</div>
+            <div class="color" id="vermelho">Vermelho</div>
+            <div class="color" id="azul">Azul</div>
+            <div class="color" id="verde">Verde</div>
         </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
