--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
-        <div class="pixeltable"></div>
+        <div class="table"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
-        <div class="pixeltable"></div>
+        <div class="table"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
-        <div class="pixeltable"></div>
+        <div class="table"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
         <div class="pixel pixelalign"></div>
     </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
