--- a/index.html
+++ b/index.html
@@ -27,5 +27,45 @@
             </tr>
         </table>
     </div>
+    <div id="pixel-board">
+        <table>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+        </table>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
