--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <section>
     <div id="color-palette">
-      <div id="black" class="color"></div>
+      <div id="black" class="color selected"></div>
       <div id="blue" class="color"></div>
       <div id="red" class="color"></div>
       <div id="green" class="color"></div>
