--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+  <main>
+    <div id="color-palette">
+      <div class="color color1"></div>
+      <div class="color color2"></div>
+      <div class="color color3"></div>
+      <div class="color color4"></div>
+    </div>
+  </main>
 </body>
 </html>
