requisito 4 - quadro de pixes 5x5 criado, alteraçoes nos arquivos html, css e js.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <section>
     <h1 id="title">Paleta de Cores</h1>
   </section>
+  <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
 </html>
