--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Pixels Art</title>
 </head>
+
 <body>
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+
+  <div id="color-palette">
+  </div>
+
+
+  <script src="script.js"></script>
 </body>
+
 </html>
