Tro a classe pixel-border para id requisito 4

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="color" id="fourthColor"></div>
     </div>
 
-    <div class="pixel-board">
+    <div id="pixel-board">
         <div class="tr">
             <div>
                 <div class="pixel"></div>
