--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id = "title">Paleta de Cores</h1>
     </header>
     <div id = "color-palette"></div>
-    <div id = "table"></div>
+    <div id = "pixel-board"></div>
    
 <script src = "script.js"></script>
     
