Adiçao de paleta de cores, com 4 cores

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="main-content">
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+  <section id="color-palette">
+    <div class="color" id="green"></div>
+    <div class="color" id="yellow"></div>
+    <div class="color" id="red"></div>
+    <div class="color" id="blue"></div>
+  </section>
 </body>
 </html>
