--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href='style.css'>
 </head>
 <body>
-  <header><h1 id="title">Paleta de Cores</h1></header>
-
-  <script> </script>
+  <header>
+    <h1 id='title'>Paleta de Cores</h1>
+  </header>
+  
+  <div id='color-palette'></div>
+  <script src='script.js'></script>
 </body>
 </html>
