--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div class="color"></div>
   </div>
   <button id="clear-board">Limpar</button>
+  <div id="resizeBoard">
+    <input id="board-size" type="text">
+    <button id="generate-board">VQV</button>
+  </div>
   <table cellspacing="0" id="pixel-board"></table>
   <script src="script.js"></script>
 </body>
