--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
 <h1 id="title">Paleta de Cores</h1>
 <div id="color-palette">
-    <div class='color'></div>
+    <div class='color selected'></div>
     <div class='color'></div>
     <div class='color'></div>
     <div class='color'></div>
 </div>
+<table id="pixels-board">
+</table >
 <script src="script.js"></script>    
 </body>
 </html>
