--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Pixels Art</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project Pixels Art</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
-    <section id="color-palette">
-        <div class="color black"></div>
-        <div class="color red"></div>
-        <div class="color blue"></div>
-        <div class="color green"></div>
-    </section>
+  <h1 id="title">Paleta de Cores</h1>
+  <section id="color-palette">
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
