--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
 
     <button id='clear-board'>Limpar</button>
+    <input type="number" id="board-size" min="5" max="50">
+    <button id='generate-board'>VQV</button>
    
     <script src="script.js"></script>
 </body>
