pintando a tabela conforma a palleta

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   </section>
   <div id="pixel-board">
     <div>
+      <div class="pixel">a</div>
       <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
+      <div class="pixel">f</div>
       <div class="pixel"></div>
       <div class="pixel"></div>
     </div>
     <div>
+      <div class="pixel">d</div>
       <div class="pixel"></div>
       <div class="pixel"></div>
-      <div class="pixel"></div>
-      <div class="pixel"></div>
+      <div class="pixel">g</div>
       <div class="pixel"></div>
     </div>
     <div>
