colocando cores nas divs atraves do css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
             <h1 id="title">Paleta de Cores</h1>
         </header>
         <section id="color-palette">
-            <div class="color" id="preto">Preto</div>
-            <div class="color" id="vermelho">Vermelho</div>
-            <div class="color" id="azul">Azul</div>
-            <div class="color" id="verde">Verde</div>
+            <div class="color" id="preto"></div>
+            <div class="color" id="vermelho"></div>
+            <div class="color" id="azul"></div>
+            <div class="color" id="verde"></div>
+
+
         </section>
+
     </main>
 
     <script src="script.js"></script>
