--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div id="color-palette">
             <div class="color selected" id="black">
             </div> 
-            <div class="color" id="">
+            <div class="color" id="corUm">
             </div>
-            <div class="color">
+            <div class="color" id="corDois">
             </div>
-            <div class="color">
+            <div class="color" id="corTres">
             </div>
         </div>
         <table id="pixel-board">
