--- a/index.html
+++ b/index.html
@@ -15,38 +15,39 @@
     <div class="color" id="vermelho"></div>
     <div class="color" id="azul"></div>
     <div class="color" id="verde"></div>  
-</div>
-  <div id="pixel-board">
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
-    <div class='pixel'></div>
   </div>
+  <div id="pixel-board">
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+  </div>
+  <button id="clear-board">Limpa grid</button>
   <script src="script.js"></script>
 </body>
 </html>
