--- a/index.html
+++ b/index.html
@@ -15,42 +15,42 @@
   </header>
   <table>
     <tr id="color-palette">
-      <td class="color black">preto</td>
+      <td class="color black selected">preto</td>
       <td class="color red">vermelho</td>
       <td class="color blue">azul</td>
       <td class="color green">verde</td>
     </tr>
   </table>
   <table id="pixel-board">
-    <tr>
+    <tr class="lines">
       <td class="pixel">1</td>
       <td class="pixel">2</td>
       <td class="pixel">3</td>
       <td class="pixel">4</td>
       <td class="pixel">5</td>
     </tr>
-    <tr>
+    <tr class="lines">
       <td class="pixel">6</td>
       <td class="pixel">7</td>
       <td class="pixel">8</td>
       <td class="pixel">9</td>
       <td class="pixel">10</td>
     </tr>
-    <tr>
+    <tr class="lines">
       <td class="pixel">11</td>
       <td class="pixel">12</td>
       <td class="pixel">13</td>
       <td class="pixel">14</td>
       <td class="pixel">15</td>
     </tr>
-    <tr>
+    <tr class="lines">
       <td class="pixel">16</td>
       <td class="pixel">17</td>
       <td class="pixel">18</td>
       <td class="pixel">19</td>
       <td class="pixel">20</td>
     </tr>
-    <tr>
+    <tr class="lines">
       <td class="pixel">21</td>
       <td class="pixel">22</td>
       <td class="pixel">23</td>
