requisito 9 - botao Limpar criado. Alteraçoes nos arquivos html, css e javascript

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <section>
     <h1 id="title">Paleta de Cores</h1>
   </section>
+  <section>
+    <button type="button" id="clear-board"><span>Limpar</span></button>
+  </section>
   <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
