3 - Adicione a cor preta como a primeira cor da paleta de cores.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,27 @@
 
     <div id='color-palette'>
         <span id='black' class='color'></span>
-        <span id='red' class='color'></span>
-        <span id='blue' class='color'></span>
-        <span id='green' class='color'></span>
+
+        <label for="input-second">
+            <span id='second-color' class='color'></span>
+        </label>
+
+        <label for="input-third">
+            <span id='third-color' class='color'></span>
+        </label>
+
+        <label for="input-fourth">
+            <span id='fourth-color' class='color'></span>
+        </label>
     </div>
+
+    <input id="input-second" class="input-colors" type="color" value="#ed4e23">
+
+    <input id="input-third" class="input-colors" type="color" value="#3970fe">
+
+    <input id="input-fourth" class="input-colors" type="color" value="#438104">
+
+    <script type='text/javascript' src='script.js'></script>
 </body>
 
 </html>
