Botao para limpar o Board

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="color fourth-color"></div>
     </div>
 
-    <div id="pixel-board"></div> 
+    <div id="pixel-board"></div>
+
+    <button id="clear-board">Limpar</button>
 
     <script src="script.js"></script>
 </body>
