--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en, pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +9,51 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+  <br>
   <div id="color-palette">
     <div class="color-palette-tr">
-        <div class="color" id="black"></div>
+        <div class="color selected" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
+    </div>
+  </div>
+  <br>
+  <div id="pixel-board">
+    <div class="pixel-board-tr">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="pixel-board-tr">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="pixel-board-tr">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="pixel-board-tr">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="pixel-board-tr">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
     </div>
   </div>
 </body>
