Adicione a pagina em quadro de pixels, com 25 pixels

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
   </header>
   <section id="color-palette">
     <table>
-      <thead>
         <tr>
           <th class="color"></th>
           <th class="color"></th>
           <th class="color"></th>
           <th class="color"></th>
         </tr>
-      </thead>
     </table>
+  </section>
+  <section id="pixel-board">
+    
   </section>
   <script src="script.js"></script>
 </body>
