--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Paleta de Cores</title>
+  <link rel="stylesheet" href="style.css">
 </head>
   <h1 id="title">Paleta de Cores</h1>
+
 <body>
     <section>
         <div id="color-palette">
-            <div class="color" id="black">Black</div>
-            <div class="color" id="blue">Blue</div>
-            <div class="color" id="green">Green</div>
-            <div class="color" id="red">Red</div>
+            <div class="color" id="black"></div>
+            <div class="color" id="blue"></div>
+            <div class="color" id="green"></div>
+            <div class="color" id="red"></div>
         </div>
 
     </section>
