implementa a escolha do tamanho do pixel board

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="paletteBlue" class="color"></div> -->
   </div>
   <button id="clear-board">Limpar</button>
+  <input type="text" id="size">
+  <button id="redefine">Definir Tamanho</button>
   <table id="pixel-board">
   </table>
   <script src="script.js"></script>
