innerText atualizado de 'limpar' para 'Limpar'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     --><div id = "paletteThree" class = "color"></div><!--
     --><div id = "paletteFour" class = "color"></div>
   </section>
-  <div id = buttonDiv></div>
+  <div id = 'buttonDiv'></div>
   <div id = "pixel-board">
 
   </div>
