9-botton limpar pixels

--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <section id="color-palette">
-    <div class="color selected">a</div>
-    <div class="color">s</div>
-    <div class="color">d</div>
-    <div class="color">f</div>
+    <div class="color selected"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
   </section>
+  <button id="clear-board">Limpar</button>
   <div id="pixel-board">
     <div>
-      <div class="pixel">a</div>
       <div class="pixel"></div>
-      <div class="pixel">f</div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
       <div class="pixel"></div>
       <div class="pixel"></div>
     </div>
     <div>
-      <div class="pixel">d</div>
       <div class="pixel"></div>
       <div class="pixel"></div>
-      <div class="pixel">g</div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
       <div class="pixel"></div>
     </div>
     <div>
@@ -52,7 +53,6 @@
       <div class="pixel"></div>
     </div>
   </div>
-
   <script src="/script.js"></script>
 </body>
 </html>
