Criando o iddas cores no css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
             <div class="color" id="vermelho"></div>
             <div class="color" id="azul"></div>
             <div class="color" id="verde"></div>
-
-
+            <table>
+                <tr>
+                    <td>a</td>
+                    <td>e</td>
+                    <td>i</td>
+                </tr>
+                <tr>
+                    <td>a</td>
+                    <td>e</td>
+                    <td>i</td>
+                </tr>
+                <tr>
+                    <td>a</td>
+                    <td>e</td>
+                    <td>i</td>
+                </tr>
+            </table>
         </section>
 
     </main>
