--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <button id="clear-board">Limpar</button>
   <div id="resizeBoard">
-    <input min="1" id="board-size" type="text">
+    <input min="1" type="number" id="board-size" type="text">
     <button id="generate-board">VQV</button>
   </div>
   <table cellspacing="0" id="pixel-board"></table>
