--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <div class="color color3"></div>
       <div class="color color4"></div>
     </div>
+    <div id="pixel-board">
+
+    </div>
   </main>
 </body>
 </html>
