--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="color color3"></div>
       <div class="color color4"></div>
     </div>
+    <button id="clear-board">Limpar</button>
     <table id="pixel-board">
       <tr>
         <td class="pixel"></td>
