--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="color-palette">
-        <div class="color" id="color1" class="selected"></div>
+        <div class="color selected" id="color1"></div>
         <div class="color" id="color2"></div>
         <div class="color" id="color3"></div>
         <div class="color" id="color4"></div>
     </div>
+
+    <input type="button" class="clear-board" value="Limpar">
 
     <div id="pixel-board">
         <div class="pixel"></div>
