--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Requisito 01 - Ok -->
     <h1 id="title">Paleta de Cores</h1>
 
-    <!-- Requisito 02 -->
+    <!-- Requisito 02 e 03 Ok-->
     <div id="color-palette">
         <div class="color" id="black"></div>
         <div class="color" id="greenyellow"></div>
@@ -21,37 +21,48 @@
         <div class="color" id="orangered"></div>
     </div>
 
-    <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+    <!-- Requisito 04 -->
+    <table id="pixel-board">
+        <tr>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+        </tr>
 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+        <tr>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+        </tr>
 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+        <tr>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+        </tr>
 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+        <tr>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+        </tr>
 
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-    </div>
+        <tr>
+            <td class="pixel"></td>
+            <td></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+        </tr>
+    </table>
 
     <script src="script.js"></script>
 </body>
