--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="color" id="azul"></div>
     <div class="color" id="verde"></div>  
   </div>
+  <button id="clear-board">Limpar</button>
   <div id="pixel-board">
     <div class="pixel"></div>
     <div class="pixel"></div>
@@ -47,7 +48,6 @@
     <div class="pixel"></div>
     <div class="pixel"></div>
   </div>
-  <button id="clear-board">Limpa grid</button>
   <script src="script.js"></script>
 </body>
 </html>
