--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pixels Art</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
 	<h1 id="title">Paleta de Cores</h1>
+
+	<section id="color-palette">
+		<div class="color"></div>
+		<div class="color"></div>
+		<div class="color"></div>
+		<div class="color"></div>
+	</section>
+
+	<script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
