--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
 </head>
 <body>
     <main>
-        <h1 id="title" >Paleta de Cores</h1>  <!-- Requisito 1 -->
-        <section id="color-palette" > <!-- Requisito 2 -->
-            <div id="black" class="color" > 'Black' </div>
-            <div id="first-color" class="color" > 'Red' </div>
-            <div id="second-color" class="color" > 'Blue' </div>
-            <div id="third-color" class="color" > 'Green' </div>
-        </section>
+        <h1 id="title" >Paleta de Cores</h1> 
+        <section id="color-palette" ></section>
+        <section id= "pixel-board"></section>
 
 
 
-
-
+        <script src="script.js"></script>
     </main>
     
 </body>
