criando botam clear

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="color red"></div>
     <div class="color green"></div>
   </sectioin>
+  <button id="clear-board">Limpar</button>
   <section id="pixel-board"></section>
   <script src="script.js"></script>
 </body>
