--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <div class="color" id="orange"></div>
         </div>
     </div>
+
+    <div id="pixel-board"></div>
     
 <script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
