--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     </div>
 
     <button id='clear-board'>Limpar</button>
-    <input type="number" id="board-size" min="5" max="50">
+    <input type="number" id="board-size" min="5" max="50" oninput="validity.valid||(value='');">
     <button id='generate-board'>VQV</button>
+    <button id='amazon-app'>Amazon App</button>
    
     <script src="script.js"></script>
 </body>
