requisito 2 aplicado as cores na div que e quem possui a classe color

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <table id="color-palette">
-    <div id="preto">
-        <tr class="color"></tr>
+    <div class="color" id="preto">
+        <tr></tr>
     </div>
-    <div id="vermelho">
-        <tr class="color"></tr>
+    <div class="color" id="vermelho">
+        <tr ></tr>
     </div>
-    <div id="azul">
-        <tr class="color"></tr>
+    <div class="color"id="azul">
+        <tr></tr>
     </div>
-    <div id="verde">
-        <tr class="color"></tr>
+    <div class="color" id="verde">
+        <tr></tr>
     </div>
     </table>
     <script src="script.js"type="text/javascript" ></script>
