Adicionado input e botao para criar o board dinamicamente (ainda sem funcionar) // Criada funcao de criacao do board baseada em uma variavel

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
 
+    
+
     <div id="color-palette">
         <div class="color black selected"></div>
         <div class="color second-color"></div>
@@ -17,6 +19,11 @@
         <div class="color fourth-color"></div>
     </div>
 
+    <div id="input">
+        <input min="1" type="text" id="board-size">
+        <button id="generate-board">VQV</button>
+    </div>
+    
     <button id="clear-board">Limpar</button>
 
     <div id="pixel-board"></div>
