--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Pixels Art | Gustavo Cerqueira</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
@@ -11,11 +16,19 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette"></section>
-    
-    <input id="board-size" type="number" min="1" max="50">
-    <button id="generate-board">VQV</button>
 
-    <button id="clear-board">Limpar</button>
+    <div id="size-input">
+      <input
+        id="board-size"
+        type="number"
+        min="1"
+        max="50"
+        placeholder="Tamanho"
+      />
+      <button id="generate-board" class="button">VQV</button>
+    </div>
+
+    <button id="clear-board" class="button">Limpar</button>
 
     <section id="pixel-board"></section>
   </body>
