--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="paletteBlue" class="color"></div> -->
   </div>
   <button id="clear-board">Limpar</button>
-  <input type="text" id="size">
-  <button id="redefine">Definir Tamanho</button>
+  <input type="number" id="board-size" min="0">
+  <button id="generate-board">VQV</button>
   <table id="pixel-board">
   </table>
   <script src="script.js"></script>
