--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1 id="title"> Paleta de Cores  </h1>
+ <div id="color-palette">
+    <div class="caixa color" id="firstbox"> </div>
+    <div class="caixa color" id="secondbox"> </div>
+    <div class="caixa color" id="thirdbox"> </div>
+    <div class="caixa color" id="fourthbox"> </div>
+ </div>
 </body>
 </html>
