--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
     <input id="input-fourth" class="input-colors" type="color" value="#438104">
 
+    <div id="pixel-board">
+
+    </div>
+
     <script type='text/javascript' src='script.js'></script>
 </body>
 
