6 - Defina a cor preta como cor inicial. Ao carregar a pagina, a cor preta ja deve estar selecionada para pintar os pixels

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 id='title'>Paleta de Cores</h1>
 
     <div id='color-palette'>
-        <span id='black' class='color'></span>
+        <span id='black' class='color selected'></span>
 
         <label for="input-second">
             <span id='second-color' class='color'></span>
