--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     </section>
 
+    <section id="button-cleaner">
+
+    </section>
+
     <section id="pixel-board">
       
     </section>
