requisito - 04 - ajustes no td

--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
 
         <tr>
             <td class="pixel"></td>
-            <td></td>
             <td class="pixel"></td>
             <td class="pixel"></td>
             <td class="pixel"></td>
+            <td class="pixel"></td>
+            
         </tr>
     </table>
 
