--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-
-  <div id="color-palette">
-  </div>
-
-
+  <div id="color-palette"></div>
+  <div id="pixels-board"></div>
   <script src="script.js"></script>
 </body>
 
