--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Paleta de Cores</title>
+    <title>Projeto 3</title>
   </head>
   <body>
     <header>
       <h1 id="title">Paleta de Cores</h1>
     </header>
-    <main>
-      <div id="color-palette">
-        <div class="color" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="yellow"></div>
-        <div class="color" id="blue"></div>
-      </div>
-    </main>
+    <div id="color-palette"></div>
+    <div id="pixel-board"></div>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
