--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
         <div class="color" id="green"></div>
     </section>
     <section id="pixel-board">
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
         <div class="table"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
         <div class="table"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
         <div class="table"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
-        <div class="pixel pixelalign cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
     </section>
     <script src="script.js"></script>
 </body>
