--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./style.css">
-        <title>Pixel Arts</title>
+        <title>Platae ed Creos</title>
     </head>
 
-    <body></body>
-    
+    <body>
+        <header>
+            <h1 id='title'>Paleta de Cores</h1>
+        </header>
+    </body>
+
 </html>
