--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <div id="color-palette"></div>
-  <div id="pixels-board"></div>
+  <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
 
