--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     </div>
 
     <button id='clear-board'>Limpar</button>
-    <input type="number" id="board-size" min="5" max="50" oninput="validity.valid||(value='');">
+    <input type="number" id="board-size" min="5" max="50">
     <button id='generate-board'>VQV</button>
     <button id='amazon-app'>Amazon App</button>
-   
     <script src="script.js"></script>
 </body>
 </html>
