Clicar em uma das cores da paleta faz com que ela seja selecionada e utilizada para preencher os pixels no quadro.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section id="color-palette">
     <table>
         <tr>
-          <th class="color"></th>
+          <th class="color selected"></th>
           <th class="color"></th>
           <th class="color"></th>
           <th class="color"></th>
