D4 Retirando a class de tr e inserindo em td

--- a/index.html
+++ b/index.html
@@ -19,40 +19,40 @@
             <div class="color" id="verde"></div>
         </section>
         <table id="pixel-board">
-            <tr class="pixel">
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
+            <tr>
+                <td class="pixel">1</td>
+                <td class="pixel">2</td>
+                <td class="pixel">3</td>
+                <td class="pixel">4</td>
+                <td class="pixel">5</td>
             </tr>
-            <tr class="pixel">
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
+            <tr>
+                <td class="pixel">1</td>
+                <td class="pixel">2</td>
+                <td class="pixel">3</td>
+                <td class="pixel">4</td>
+                <td class="pixel">5</td>
             </tr>
-            <tr class="pixel">
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
+            <tr>
+                <td class="pixel">1</td>
+                <td class="pixel">2</td>
+                <td class="pixel">3</td>
+                <td class="pixel">4</td>
+                <td class="pixel">5</td>
             </tr>
-            <tr class="pixel">
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
+            <tr>
+                <td class="pixel">1</td>
+                <td class="pixel">2</td>
+                <td class="pixel">3</td>
+                <td class="pixel">4</td>
+                <td class="pixel">5</td>
             </tr>
-            <tr class="pixel">
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
+            <tr>
+                <td class="pixel">1</td>
+                <td class="pixel">2</td>
+                <td class="pixel">3</td>
+                <td class="pixel">4</td>
+                <td class="pixel">5</td>
             </tr>
         </table>
     </main>
