--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div id="red" class="color"></div>
     <div id="blue" class="color"></div>
     <div id="green" class="color"></div>
+    </section>
+    
     <table id="pixel-board">
 
     </table>
