--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <h1 id="title"> Paleta de Cores</h1>
 
-    <div id="color-palette">
-        <div class="color" style="background-color: black;"> </div>
-        <div class="color" style="background-color: blue;"> </div>
-        <div class="color" style="background-color: brown;"> </div>
-        <div class="color" style="background-color: chartreuse;"> </div>
-    </div>
+    <ul id="color-palette">
+        <li class="color" style="background-color: black;"> </li>
+        <li class="color" style="background-color: blue;"> </li>
+        <li class="color" style="background-color: brown;"> </li>
+        <li class="color" style="background-color: chartreuse;"> </li>
+    </ul>
 
 </body>
 
