--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Project Pixels Art</title>
+  <title>Paleta de Cores</title>
 </head>
 <body>
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <table id="color-palette"> <!--Adicionar as linhas e colunas com className="color"-->
-  </table>
-  
+  <div id="color-palette"> 
+  </div>
+
+  <div id="pixel-board"> 
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
