--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <div class="pixel align cor"></div>
         <div class="pixel align cor"></div>
         <div class="pixel align cor"></div>
+        <div class="table"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
+        <div class="pixel align cor"></div>
     </section>
     <script src="script.js"></script>
 </body>
