--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <section>
-    <div id="color-palette">
-      <div class="color black" id="black"></div>
-      <div class="color red" id="red"></div>
-      <div class="color blue" id="blue"></div>
-      <div class="color green" id="green"></div>
-      <input type="color" id="buttonColor" class="paletaInput">
-    </div>
-  </section>
-
+  <section id="color-palette" class="colorPalette">
+    <div class="color" id="black"></div>
+    <div class="color" id="red"></div>
+    <div class="color" id="blue"></div>
+    <div class="color" id="green"></div>
+  </section>  
   <button id="clear-board">Clear</button>
-  <div id="pixel-board"></div>
-  <p>Type a number of  pixels per square that you want</p>
-  <input type="number" id="size">
-  <button id="enter">Enter</button>
-  
+  <input type="number" min="1" id="board-size">
+  <button id="generate-board">VQV</button>
+  <section id="pixel-board" class="pixelBoard">
+  </section>
 </body>
 <script src="script.js"></script>
 </html>
