--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<header><h1 id="title">Paleta de Cores</h1></header>
 	<div id="color-palette"></div>
+	<section id="pixel-board"></section>
 
 	<script src="script.js"></script>
 
