requisitos 2 e 3(melhorados) e requisito 4

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
   <link rel="stylesheet" href="style.css">
   <title>Paleta de Cores</title>
 </head>
-<h1 id="title">Paleta de Cores</h1>
 <body>
+  <h1 id="title">Paleta de Cores</h1>
+  <div id="table">
+    <div id="color-palette" class="tr">
+      <div id="color1" class="color td"></div>
+      <div id="color2" class="color td"></div>
+      <div id="color3" class="color td"></div>
+      <div id="color4" class="color td"></div>
+    </div>
+    <div id="pixel-board" class="tr"></div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
