--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1 id="title">Paletas de Cores</h1>
+  <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
     <div class="color"></div>
     <div class="color"></div>
@@ -16,8 +16,8 @@
     <div class="color"></div>
   </div>
 
-  <div id="pixel-board">
-    
-  </div>
+  <div id="pixel-board"></div>
+  
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
