--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="paletteBlue" class="color"></div> -->
   </div>
   <button id="clear-board">Limpar</button>
-  <input type="number" id="board-size" min="0">
+  <input type="number" id="board-size" min="1" max="50" />
   <button id="generate-board">VQV</button>
   <table id="pixel-board">
   </table>
