--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 id="title">Paleta de Cores</h1>
   <button type="button" onclick="criaPixels()">Nova tabela</button>
   <section id="secao">
-    <table class="color-palette">    
+    <table id="color-palette">    
         <td class="color c1" onclick="pegaCor"></td>
         <td class="color c2"></td>
         <td class="color c3"></td>
