--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="palette">
         <h1 id="title">Paleta de Cores</h1>
         <div id="color-palette">
-            <div class="color" id="black"></div>
+            <div class="color selected" id="black"></div>
             <div class="color" id="green"></div>
             <div class="color" id="blue"></div>
             <div class="color" id="orange"></div>
