--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <button id='clear-board'>Limpar</button>
-    <input  id="board-size" type="number" min='1' max="50">
+    <input  id="board-size" type="number" min=1>
     <button id='generate-board'>VQV</button>
     <button id='amazon-app'>Amazon App</button>
     <script src="script.js"></script>
