--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <div id="color-palette"></div>
     <script src="script.js"></script>
 </body>
 </html>
