Criand alerta e adicionando type=number no input

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="input">
-        <input min="1" type="text" id="board-size">
+        <input type="number" min="1" type="text" id="board-size">
         <button id="generate-board">VQV</button>
     </div>
     
