--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="color" id="blue"></div>
     <div class="color" id="green"></div>
   </section>  
-  <button id="clear-board">Clear</button>
+  <button id="clear-board">Limpar</button>
   <input type="number" min="1" id="board-size">
   <button id="generate-board">VQV</button>
   <section id="pixel-board" class="pixelBoard">
