--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
             </div>
             <div class="color" id="corTres">
             </div>
+                       
         </div>
+        <div id="botao">
+                <button id="clear-board">Limpar</button>
+            </div> 
         <table id="pixel-board">
 
         </table>
+        
     </main>
 
 
