tentando resolver o exericcio 7

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 		<div class="color"></div>
 	</section>
 
-	<section id="pixel-board">
-
+	<section>
+		<button id="clear-board">Limpar</button>
 	</section>
+
+	<section id="pixel-board"></section>
+	
 	<script src="script.js"></script>
+
+
 
 </body>
 
