--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <main>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-
-  </header>
+  <link rel="stylesheet" href="style.css">
+   
+   
 </head>
+
 <body>
-  
-</main>
+  <main>
+    <header>
+      <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <section>
+      <ul id="color-palette">
+        
+      </ul>
+    </section>
+    <script src="script.js"></script>
+
+    <footer>
+
+    </footer>
+  </main>
 </body>
 </html>
