adding section color palette, and colors in css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 
     <body>
         <header>
-            <h1 id='title'>Paleta de Cores</h1>
+            <h1 id="title">Paleta de Cores</h1>
         </header>
+
+        <section id="color-palette">
+            <div id="one" class="color" ></div>
+            <div id="two" class="color" ></div>
+            <div id="three" class="color" ></div>
+            <div id="" class="color" ></div>
+        </section>
     </body>
 
 </html>
