--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="one" class="color" ></div>
             <div id="two" class="color" ></div>
             <div id="three" class="color" ></div>
-            <div id="" class="color" ></div>
+            <div id="four" class="color" ></div>
         </section>
     </body>
 
