requisito 9criado botao limpar

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
     <section id="pixel-board">
         
-
     </section>
+
+    <button id="clear-board" onclick="clearBoard()"> Clear Board</button>
 
 <script src="/script.js"></script>
 </body>
