--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div id="color-black" class="color"></div>
-    <div id="color-green" class="color"></div>
-    <div id="color-red" class="color"></div>
-    <div id="color-blue" class="color"></div>
+    <div id="black" class="color"></div>
+    <div id="green" class="color"></div>
+    <div id="red" class="color"></div>
+    <div id="blue" class="color"></div>
   </div>
   <div id="pixel-board">
     <table>
