--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="color"></div>
     <div class="color"></div>
     <div class="color"></div>
-    <ul id ='pixel-board'></ul>
+    <section id ='pixel-board'></section>
 
     <script src="script.js"></script>
 </body>
