Adicionadas cores randomicas dos 3 outros elementos

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div id="color-palette">
         <div class="color black selected"></div>
-        <div class="color second-color"></div>
-        <div class="color third-color"></div>
-        <div class="color fourth-color"></div>
+        <div class="color color1"></div>
+        <div class="color color2"></div>
+        <div class="color color3"></div>
     </div>
 
     <div id="input">
