[Felipe Carvalho] Requisito 4

--- a/index.html
+++ b/index.html
@@ -19,6 +19,38 @@
         <li class="color" style="background-color: chartreuse;"> </li>
     </ul>
 
+    <ul id="pixel-board">
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <br>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <br>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <br>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <br>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+        <li class="pixel"> </li>
+    </ul>
+
 </body>
 
 </html>
