--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css"  href="style.css">
-  <script type="text/javascript" src="script.js"></script>
   <title>Project Pixels Art</title>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <h1 id = 'title'>Paleta de Cores</h1>
-
-  
+  <section id="color-palette">
+  </section>
 </body>
 </html>
