ajustado local do botao e escrita

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
 
+    <button id="clear-board" onclick="clearBoard()"> Limpar</button>
+
     <section id="color-palette">
         <div id="blackBox" class="color black selected"> </div>
         <div id="blueBox" class="color blue "> </div>
@@ -20,13 +22,9 @@
         <div id="redBox" class="color red"> </div>
     </section>
 
-    <section id="pixel-board">
-        
-    </section>
+    <section id="pixel-board"></section>
 
-    <button id="clear-board" onclick="clearBoard()"> Clear Board</button>
-
-<script src="/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
