adicionando os pixels dentro do pixel-board

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <td class="color c4"></td>    
     </table>
   </section>
+  <section id="pixel-board"></section>
   <button type="button" onclick="criaPixels()">Nova tabela</button>
   <script type="text/javaScript" src="script.js"></script>  
 </body>
