[Felipe Carvalho] Requisito 5

--- a/index.html
+++ b/index.html
@@ -19,37 +19,43 @@
         <li class="color" style="background-color: chartreuse;"> </li>
     </ul>
 
-    <ul id="pixel-board">
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <br>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <br>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <br>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <br>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-        <li class="pixel"> </li>
-    </ul>
+    <table id="pixel-board">
+        <tr>
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+        </tr>
+        <tr>
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+        </tr>
+        <tr>
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+        </tr>
+        <tr>
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+        </tr>
+        <tr>
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+            <th class="pixel">
+            <th class="pixel"> </th>
+        </tr>
+    </table>
 
 </body>
 
