--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-    <div class="color selected" id="preto"></div>
-    <div class="color" id="vermelho"></div>
-    <div class="color" id="azul"></div>
-    <div class="color" id="verde"></div>  
+    <div class="color selected" id="black"></div>
+    <div class="color" id="red"></div>
+    <div class="color" id="blue"></div>
+    <div class="color" id="green"></div>  
   </div>
   <button id="clear-board">Limpar</button>
   <div id="pixel-board">
