--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="title">Paleta de Cores</h1>
+  <h1 id="title">Paleta de Cores</h1>
+  <nav id="color-palette"></nav>
+  <section id="pixel-board"></section>
   <script src="script.js"></script>
 </body>
 </html>
