--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </tr>
     </table>
   </section>
-  <section id="pixel-board">
-    
+  <section id="sectionButton"></section>
+  <section id="pixel-board">    
   </section>
   <script src="script.js"></script>
 </body>
