adjustment to previous requirements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Pixels Art Project</title>
   </head>
   <body>
@@ -57,5 +58,6 @@
         </table>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
