--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
-      <div class="color"></div>
+      <div class="color selected"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
     </section>
+    <button id="clear-board">Limpar</button>
     <table id="pixel-board"></table>
     <script src="./script.js"></script>
   </body>
