--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,12 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  
-  <div id="color-pallete">
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+  <div id="color-palette">
   </div>
 
+  <ul id="pixel-board">
+    <li>teste</li>
+  </ul>
   <script src="script.js"></script>
 </body>
 </html>
