--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <div class="color" id="red"></div>
     <div class="color" id="blue"></div>
   </section>
+  <section id="pixel-board"></section>
+  <script src="script.js"> </script>
 </body>
 </html>
