--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css"  href="style.css">
   <title>Project Pixels Art</title>
-  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <h1 id = 'title'>Paleta de Cores</h1>
   <section id="color-palette">
   </section>
+  <script src="script.js"></script>
 </body>
 </html>
