--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div id="color-palette"></div>
     </section>
 
+    <section id="pixel-board"></section>
+
     <script src="script.js"></script>
 </body>
 </html>
