--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <br>
   <div id="color-palette">
     <div class="color-palette-tr">
         <div class="color selected" id="black"></div>
@@ -18,7 +17,7 @@
         <div class="color" id="blue"></div>
     </div>
   </div>
-  <br>
+  <button id="clear-board">Limpar</button>
   <div id="pixel-board">
     <div class="pixel-board-tr">
       <div class="pixel"></div>
