lines and columns 5x5

--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
   <header>
     <h1 id='title'>Paleta de Cores</h1>
   </header>
-  <div id='color-palette'>
-    <div class='color'>teste</div>
-    <div class='color'>teste</div>
-    <div class='color'>teste</div>
-    <div class='color'>teste</div>
-  </div>
+  <div id='color-palette'></div>  
+  <table id='pixel-board'></table>   
+  
   <script src="script.js"></script>
 </body>
 </html>
