Iniciando a criaçao dos pixels

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
 
-    <div id="color-palette">
-        <table>
+    <div>
+        <table id="color-palette">
             <td class="color"></td>
             <td class="color"></td>
             <td class="color"></td>
@@ -19,7 +19,20 @@
         </table>
     </div>
 
-    
+    <div id="botão"> 
+        <button id="clear-board">Limpar</button>
+    </div>
+
+    <div id="paleta">
+        <table id="pixel-board">
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+        </table>
+    </div>
+   
     
     <script src="script.js"></script>
 </body>
