D6 definindo o primeiro bloco como preto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <table id="pixel-board">
             <tr>
-                <td class="pixel">1</td>
+                <td class="pixel" style="background-color: black;">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
                 <td class="pixel">4</td>
