--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <div class="color"></div>
     </div>
     <button id="clear-board">Limpar</button>
+    <br>
+    <div id="margin-beauty">
+        <input id="board-size" type="number" min="5" max="50">
+        <!-- os atributos do input peguei no https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/number -->
+        <button id="generate-board">VQV</button>
+    </div>
     <table id="pixel-board">       
     </table>
     <script src="script.js"></script>
