--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<header>
-    <h1 id="title"> Paleta de Cores</h1>
-</header>
-<body>
-    <div id='color-palette'>
-        <div class ='tr'>
-
-            <div id="paleta1" class="color"></div>
-            <div id="paleta2" class="color"></div>
-            <div id="paleta3" class="color"></div>
-            <div id="paleta4" class="color"></div>
-
-        </div id="">
-
-    </div>
-</body>
+    <link rel="stylesheet"  href="style.css">
+  </head>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+  <body>
+    <div id="color-palette">
+    <div id="color-palette1" class="color"></div>
+    <div id="color-palette2" class="color"></div>
+    <div id="color-palette3" class="color"></div>
+    <div id="color-palette4" class="color"></div>
+</div>
+    <script src="script.js"></script>
+  </body>
 </html>
