D6 acrescentando selected na classe do id preto

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <h1 id="title">Paleta de Cores</h1>
         </header>
         <section id="color-palette">
-            <div class="color" id="preto"></div>
+            <div class="color selected" id="preto"></div>
             <div class="color" id="vermelho"></div>
             <div class="color" id="azul"></div>
             <div class="color" id="verde"></div>
         </section>
         <table id="pixel-board">
             <tr>
-                <td class="pixel">1</td>
+                <td class="pixel" aria-selected="">1</td>
                 <td class="pixel">2</td>
                 <td class="pixel">3</td>
                 <td class="pixel">4</td>
