adicionando e removendo a classe selected

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <h1 id="title">Paleta de Cores</h1>
   <section id="secao">
     <table id="color-palette">    
-      <td class="color c1" onclick="pegaCor"></td>
-      <td class="color c2"></td>
-      <td class="color c3"></td>
-      <td class="color c4"></td>    
+      <td class="color c1" onclick="pegaCor()"></td>
+      <td class="color c2" onclick="pegaCor()"></td>
+      <td class="color c3" onclick="pegaCor()"></td>
+      <td class="color c4" onclick="pegaCor()"></td>    
     </table>
   </section>
   <section id="pixel-board"></section>
