--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
   <h1 id = 'title'>Paleta de Cores</h1>
+
   <section id ='color-palette'>
     <div class="color"></div>
     <div class="color"></div>
     <div class="color"></div>
     <div class="color"></div>
+  </section>
+    <button id = 'clear-board'>Limpar</button></div>
     <section id ='pixel-board'></section>
 
     <script src="script.js"></script>
