--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <div class="color" id="blue"></div>
     </div>
   </div>
+  <input id="board-size" type="number" min="5" max="50" value="40">
+  <button id="generate-board">VQV</button>
+  <br>
+  <br>
   <button id="clear-board">Limpar</button>
   <div id="pixel-board">
     <div class="pixel-board-tr">
