--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         <li class="color"></li>
         <li class="color"></li>
     </ul>
+    <section id="pixel-board"></section>
+    <script src="script.js"></script>
 </body>
 </html>
