--- a/index.html
+++ b/index.html
@@ -15,9 +15,26 @@
         <div id="color-palette">
 
         </div>
+    </section>
+    <section>
+        <table border id="pixel-board">
+            <tr id="linha-1">
 
+            </tr>
+            <tr id="linha-2">
 
+            </tr>
+            <tr id="linha-3">
 
+            </tr>
+            <tr id="linha-4">
+
+            </tr>
+            <tr id="linha-5">
+
+            </tr>
+
+        </table>
     </section>
     <script src="script.js"></script>
 </body>
