--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
   <header>
     <h1 id='title'>Paleta de Cores</h1>
-  </header>
-  <div id='color-palette'></div>  
-  <table id='pixel-board'></table>   
+  </header>  
+  <div id='color-palette'></div>
+  <div id="btn-div">
+    <button id='clear-board'>Clear</button>
+  </div> 
+  <table id='pixel-board'></table>
+   
   
   <script src="script.js"></script>
 </body>
