--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
       <div class="color"></div>
       <div class="color"></div>
     </section>
-    <button id="clear-board">Limpar</button>
+    <div class="input-container">
+      <button id="clear-board">Limpar</button>
+      <div>
+        <input min="1" id="board-size" type="number" />
+        <button id="generate-board">VQV</button>
+      </div>
+    </div>
+
     <table id="pixel-board"></table>
     <script src="./script.js"></script>
   </body>
