--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1 id="title">Paleta de Cores</h1>
         </header>
-        <section id="color-palette">
+        <section id="color-palette" onclick="">
             <div class="color selected" id="preto"></div>
             <div class="color" id="vermelho"></div>
             <div class="color" id="azul"></div>
